Fix composer text alignment

--- a/res/css/views/rooms/_MessageComposer.scss
+++ b/res/css/views/rooms/_MessageComposer.scss
@@ -20,7 +20,7 @@ limitations under the License.
     margin: auto;
     border-top: 1px solid $primary-hairline-color;
     position: relative;
-    padding-left: 83px;
+    padding-left: 82px;
 }
 
 .mx_MessageComposer_replaced_wrapper {
